--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 set(PROJECT_NAME
-        xmrblocks)
+        rmxblocks)
 
 
 project(${PROJECT_NAME})
@@ -15,30 +15,30 @@ if (WIN32)
 endif()
 
 
-if (NOT MONERO_DIR)
-    set(MONERO_DIR ~/monero)
+if (NOT REMIX_DIR)
+    set(REMIX_DIR ~/remix)
 endif()
 
-message(STATUS MONERO_DIR ": ${MONERO_DIR}")
+message(STATUS REMIX_DIR ": ${REMIX_DIR}")
 
-set(MONERO_SOURCE_DIR ${MONERO_DIR}
-        CACHE PATH "Path to the root directory for Monero")
+set(REMIX_SOURCE_DIR ${REMIX_DIR}
+        CACHE PATH "Path to the root directory for Remix")
 
-# set location of monero build tree
-set(MONERO_BUILD_DIR ${MONERO_SOURCE_DIR}/build/release/
-        CACHE PATH "Path to the build directory for Monero")
+# set location of remix build tree
+set(REMIX_BUILD_DIR ${REMIX_SOURCE_DIR}/build/release/
+        CACHE PATH "Path to the build directory for Remix")
 
 set(MY_CMAKE_DIR "${CMAKE_CURRENT_LIST_DIR}/cmake"
         CACHE PATH "The path to the cmake directory of the current project")
 
 list(APPEND CMAKE_MODULE_PATH "${MY_CMAKE_DIR}")
 
-set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "${MONERO_BUILD_DIR}"
-        CACHE PATH "Add Monero directory for library searching")
+set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "${REMIX_BUILD_DIR}"
+        CACHE PATH "Add Remix directory for library searching")
 
 include(MyUtils)
 
-find_package(Monero)
+find_package(Remix)
 
 # find boost
 find_package(Boost COMPONENTS
@@ -64,7 +64,7 @@ endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin" OR WIN32)
     add_library(unbound STATIC IMPORTED)
-    set_property(TARGET unbound PROPERTY IMPORTED_LOCATION ${MONERO_BUILD_DIR}/external/unbound/libunbound.a)
+    set_property(TARGET unbound PROPERTY IMPORTED_LOCATION ${REMIX_BUILD_DIR}/external/unbound/libunbound.a)
 endif()
 
 # include boost headers
