More tweaks and changes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(myxrm)
+project(myrmx)
 
 set(SOURCE_HEADERS
         MicroCore.h
@@ -16,9 +16,9 @@ set(SOURCE_FILES
 		rpccalls.cpp rpccalls.h
 		version.h.in CurrentBlockchainStatus.cpp MempoolStatus.cpp MempoolStatus.h)
 
-# make static library called libmyxrm
+# make static library called libmyrmx
 # that we are going to link to
 # in the root CMakeLists.txt file
-add_library(myxrm
+add_library(myrmx
 		STATIC
 		${SOURCE_FILES})
